--- a/br-frontend/index.html
+++ b/br-frontend/index.html
@@ -9,5 +9,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      document.addEventListener('scroll', () => {
+        const header = document.getElementById('header')
+        if (window.scrollY > 0) {
+          header.classList.add('scrolled-header')
+          header.classList.remove('unscrolled-header')
+          // header.style.backgroundColor = 'rgba(0, 0, 0, 1)'
+        } else {
+          // header.style.backgroundColor = 'rgba(0, 0, 0, 0)'
+          header.classList.add('unscrolled-header')
+        }
+      })
+    </script>
   </body>
 </html>
